(feat) 實作 login、register、refresh api
- 調整通用error middleware邏輯
- 新增套件: jsonwebtoken、bcryptjs、validator、prettier、prettier-eslint
